[tool.poetry]
name = "design-pattern-study"
version = "0.1.0"
description = ""
authors = ["Dante Jeon <imdff0803@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
SQLAlchemy = "^1.4.46"
Django = "^4.1.5"
requests = "^2.28.2"
boto3 = "^1.26.59"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
pyupgrade = "^3.3.1"
pytest = "^7.2.1"
fakeredis = "^2.5.0"
pytest-mock = "^3.10.0"

[tool.black]
line-length = 112

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
